--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav{
     height: 30px;
 }
 .sticky{
-    position: -webkit-sticky;
+    width:100%;   
     position: sticky;
     top: 0;
     padding: 10px;
